description = "Persists changes from queue to DB"

apply plugin: 'groovy'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

version = '0.0.1'

sourceCompatibility = 11
targetCompatibility = 11

test {
    jvmArgs '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED' //TODO Cassandra 4 - Remove when no longer needed
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok:1.18.12'
    compileOnly 'org.projectlombok:lombok:1.18.12'

    compile 'org.springframework.boot:spring-boot-starter:2.3.1.RELEASE'
    compile 'org.springframework.kafka:spring-kafka:2.5.3.RELEASE'
    compile 'org.springframework.data:spring-data-cassandra:3.0.1.RELEASE'
    compile 'com.datastax.oss:java-driver-core:4.7.2'

    compile 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
    compile 'com.google.guava:guava:29.0-jre'

    testCompile project(':test-utils')
    testCompile 'org.springframework.boot:spring-boot-starter-test:2.3.1.RELEASE'
    testCompile 'org.spockframework:spock-spring:1.3-groovy-2.5'
    testCompile 'org.springframework.kafka:spring-kafka-test:2.5.3.RELEASE'
    testCompile 'org.cassandraunit:cassandra-unit:4.3.1.0'
    testCompile 'org.apache.cassandra:cassandra-all:4.0-alpha4'           //TODO Cassandra 4 - Remove when version 4 included in cassandra-unit-spring
    testCompile 'org.hibernate.validator:hibernate-validator:6.1.5.Final' //TODO Cassandra 4 - Remove when working version inherited frm cassandra-unit-spring
}
